Use Java 11 functionality where possible (#689)